Responsive issues resolved for portfolio images on iPhone XR - SLF

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,7 +296,8 @@ form {
     }
 .fullsizeportitem img {
     margin: 0px auto;
-    max-width: 100%;
+    width: 100%;
+    height: intrinsic;
     border-radius: 5px;
     }
     .closeportitem {
